# md2html

./: .gitignore  README.md  config.py  main.py  pyproject.toml
apps/theme_switcher/: __init__.py  main.py
apps/theme_switcher/resources/css/: style.css
apps/theme_switcher/resources/js/: main.js
resources/css/: main_style.css  theme_markdown.css
resources/css/theme_switcher/: style.css
resources/js/: MathJax_init.js
resources/js/theme_switcher/: auto_theme_init.js  black_theme_init.js  light_theme_init.js  teheme_swither.js
resources/templates/: main_template.html
services/base/: app.py  apps_compositor.py  apps_controller.py  contracts.py
